# ToPresente

./: .coveragerc  .gitignore  .stestr.conf  .testr.conf  .travis.yml  README.md  benchmark.py  requirements.txt  result.txt  setup.cfg  setup.py  test-requirements.txt  tolerance_exp.csv  tolerance_experiment.sh  tox.ini
scripts/: run.py  run.python
to_presente/: benchmark.py  shell.py
to_presente/scripts/: run.py
to_presente/tests/: __init__.py
to_presente/tests/unit/: test_shell.py
