[metadata]
name = to_presente
summary = PROFESSOR, TO PRESENTE! - Projeto da disciplina de Inteligência Artificial 2018.1
description-file =
    README.md
author = UFCG
author-email = benardinunes@gmail.com
home-page = https://github.com/RonaldoMPF/ToPresente
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Development Status :: 1 - Beta',
    Programming Language :: Python',
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    to_presente

[entry_points]
console_scripts = 
    to_presente = to_presente.shell:main
    
[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True

[wheel]
universal = 1
